# postmeta

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
docs/: adding-primitives.md  design.md  ref-internals.md  ref-language.md  ref-operators.md  ref-syntax.md
lib/: format.mp  graph.mp  marith.mp
postmeta-cli/: Cargo.toml
postmeta-cli/src/: app.rs  args.rs  fonts.rs  fs.rs  main.rs
postmeta-cli/tests/: cli_integration.rs
postmeta-core/: Cargo.toml
postmeta-core/src/: command.rs  equation.rs  error.rs  expr_value.rs  filesystem.rs  input.rs  internals.rs  interpreter.rs  lib.rs  scanner.rs  symbols.rs  token.rs  types.rs  variables.rs
postmeta-core/src/command/: mod.rs  primitives.rs
postmeta-core/src/interpreter/: dep_arith.rs  equation.rs  expand.rs  expr.rs  helpers.rs  mod.rs  operators.rs  path_parse.rs  statement.rs  tests.rs
postmeta-core/src/interpreter/expand/: conditionals.rs  input_commands.rs  loops.rs  macros.rs  mod.rs
postmeta-core/src/interpreter/operators/: arithmetic.rs  mod.rs  paths.rs  pictures.rs  strings.rs  text.rs  transforms.rs
postmeta-core/src/interpreter/parser/: expression.rs  mod.rs  statements.rs
postmeta-core/src/interpreter/runtime/: macros.rs  mod.rs  pictures.rs  scope.rs
postmeta-core/src/interpreter/tests/: arithmetic.rs  control_flow.rs  edge_cases.rs  equations.rs  helpers.rs  io.rs  macros.rs  mod.rs  paths.rs  pictures.rs  plain_mp.rs  strings.rs  variables.rs
postmeta-fonts/: Cargo.toml
postmeta-fonts/fonts/: LICENSE-GUST.txt
postmeta-fonts/src/: composite.rs  data.rs  embedded.rs  error.rs  lib.rs  metrics.rs  outline.rs  provider.rs
postmeta-graphics/: Cargo.toml
postmeta-graphics/src/: bbox.rs  bezier.rs  error.rs  intersection.rs  lib.rs  math.rs  pen.rs  picture.rs  test_helpers.rs  transform.rs  types.rs
postmeta-graphics/src/path/: bezier_path.rs  hobby.rs  mod.rs  tridiagonal.rs
postmeta-graphics/src/path/bezier_path/: mod.rs  numeric.rs  queries.rs  subpath.rs
postmeta-graphics/src/path/hobby/: math.rs  mod.rs
postmeta-graphics/src/types/: geometry.rs  knot.rs  mod.rs  objects.rs  style.rs  tolerances.rs
postmeta-svg/: Cargo.toml
postmeta-svg/src/: document.rs  lib.rs  objects.rs  options.rs  outline.rs  path.rs  renderer.rs  tests.rs  util.rs
postmeta-wasm/: .gitignore  Cargo.toml
postmeta-wasm/src/: lib.rs
visual-tests/: README.md  index.html  run.py
visual-tests/cases/: example_001.mp  example_002.mp  example_003.mp  example_004.mp  example_005.mp  example_006.mp  example_007.mp  example_008.mp  example_009.mp  example_010.mp  example_011.mp  example_012.mp  example_013.mp  example_014.mp  example_015.mp  example_016.mp  example_017.mp  example_018.mp  example_019.mp  example_020.mp  example_021.mp  example_022.mp  example_023.mp  example_024.mp  example_025.mp  example_026.mp  example_027.mp  example_028.mp  example_029.mp  example_030.mp  example_031.mp  example_032.mp  example_033.mp  example_034.mp  example_035.mp  example_036.mp  example_037.mp  example_038.mp  example_039.mp  example_040.mp  (+264 more)
web/: .gitignore  README.md  deno.json  index.html
web/scripts/: build.ts  build_wasm.ts  common.ts  dev.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/editor/: metapostLanguage.ts
web/src/engine/: postmeta.ts
