[package]
name = "postmeta-graphics"
description = "Core graphics primitives for PostMeta (MetaPost reimplementation)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kurbo = { version = "0.13", default-features = false, features = ["libm"] }

[lints]
workspace = true
