[package]
name = "postmeta-svg"
description = "SVG renderer for PostMeta"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
postmeta-graphics = { path = "../postmeta-graphics" }
svg.workspace = true

[dev-dependencies]
kurbo.workspace = true

[lints]
workspace = true
