[package]
name = "postmeta-svg"
description = "SVG renderer for PostMeta"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
postmeta-graphics = { path = "../postmeta-graphics" }
svg = "0.18"

[dev-dependencies]
kurbo = { version = "0.13", default-features = false, features = ["libm"] }

[lints]
workspace = true
