[package]
name = "postmeta-svg"
description = "SVG renderer for PostMeta"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
postmeta-fonts = { path = "../postmeta-fonts" }
postmeta-graphics = { path = "../postmeta-graphics" }
svg = "0.18"

[lints]
workspace = true
